codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
assertion_line: 1326
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                                 │
│                                                                           │
│ Visit https://invalid.chatgpt.invalid/codex/settings/usage for up-to-date │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:            gpt-5.1-codex (reasoning none, summaries auto)         │
│  Directory: [[workspace]]                                                 │
│  Permissions:      Custom (workspace with network access, on-request)     │
│  Agents.md:        <none>                                                 │
│                                                                           │
│  Token usage:      2K total  (1.4K input + 600 output)                    │
│  Context window:   100% left (2.2K used / 272K)                           │
│  5h limit:         [███████████░░░░░░░░░] 55% left (resets 09:25)         │
│  Weekly limit:     [██████████████░░░░░░] 70% left (resets 09:55)         │
│  Credits:          38 credits                                             │
╰───────────────────────────────────────────────────────────────────────────╯
