codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui/src/status/tests.rs
assertion_line: 1509
expression: sanitized
---
/status

╭───────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                                 │
│                                                                           │
│ Visit https://invalid.chatgpt.invalid/codex/settings/usage for up-to-date │
│ information on rate limits and credits                                    │
│                                                                           │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto)     │
│  Directory: [[workspace]]                                                 │
│  Permissions:      Custom (workspace with network access, on-request)     │
│  Agents.md:        <none>                                                 │
│                                                                           │
│  Token usage:      1.9K total  (1K input + 900 output)                    │
│  Context window:   100% left (2.25K used / 272K)                          │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)         │
│  Weekly limit:     [████████████░░░░░░░░] 60% left (resets 03:34)         │
│  Warning:          limits may be stale - start new turn to refresh.       │
╰───────────────────────────────────────────────────────────────────────────╯
